--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,3 +12,9 @@ commands:
     description: unfreeze player
     usage: /unfreeze [player_name]
     permission: chanasmp.commands.unfreeze
+  botduel:
+    description: To Duel with a bot
+    usage: /botduel
+  chanasmp:
+    description: Main command for the plugin
+    usage: /chanasmp
