Added some skin getting for the NPC in botduel stuff

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>ProtocolLib</artifactId>
             <version>4.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
+        </dependency>
     </dependencies>
 
 
