Fix jumpscare command did not getting register and fix cooldown message showing when interact with block

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -16,3 +16,6 @@ commands:
   chanasmp:
     description: Main command for the plugin
     usage: /chanasmp
+  jumpscare:
+    description: To jumpscare someone
+    usage: /jumpscare [player_name]
