Add mute command and fix stuff.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -19,7 +19,9 @@ commands:
   jumpscare:
     description: To jumpscare someone
     usage: /jumpscare [player_name]
-
   fly:
     description: To fly while not in creative mode
     usage: /fly
+  mute:
+    description: To mute the player (In Development)
+    usage: /mute <player> <reason>
